--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -3,3 +3,20 @@
     title   = "MODES User Guide, Version 3",
     year    = "2010",
 }
+
+@incollection{hschober2009,
+    author    = "H. Schober",
+	title     = "Neutron Scattering Instrumentation.",
+    booktitle = "Neutron Applications in Earth, Energy and Environmental Sciences",
+    publisher = "Springer",
+    volume   = "8",
+    year      = "2009",
+}
+
+@incollection{rpynn2008,
+    author    = "R. Pynn",
+	title     = "Neutron Scattering—A Non-destructive Microscope for Seeing Inside Matter",
+    booktitle = "Neutron Scattering Applications and Techniques",
+    publisher = "Springer",
+    year      = "2008",
+}
