--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -20,3 +20,11 @@
     publisher = "Springer",
     year      = "2008",
 }
+
+@techreport{smukhopadhyay2014,
+	author = "S. Mukhopadhyay",
+	title = "How to use Mantid for low energy inelastic neutron scattering data analysis on indirect geometry instruments",
+	institution = "Rutherford Appleton Laboratory",
+	year = "2014",
+	
+}
